--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "nodemon": "^3.1.4",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
+    "react-time-picker": "^7.0.0",
     "tailwindcss": "^3.4.10",
     "webpack": "^5.93.0"
   },
