--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "server-dev": "npx nodemon --watch server server/index.js",
-    "client-dev": "npx webpack --watch"
+    "client-dev": "npx webpack --watch",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
